--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="description" content="EqualPortal - Share and discuss incidents from around the world.">
+    <meta name="keywords" content="crime reports, inequality, incidents, news, discussions, equalportal, justice, ">
+    <meta name="robots" content="index, follow">
+
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
